# cpp-cmake-template

./: cookiecutter.json  post_gen_project.py
{{ cookiecutter.project_name }}/: .gitignore  CMakeLists.txt
{{ cookiecutter.project_name }}/src/: main.cpp  {% if cookiecutter.type == "qt-gui" %}mainwindow.h{% endif %}
{{ cookiecutter.project_name }}/{{ 'rpm' if cookiecutter.add_rpm == 'y' else '1' }}/: {{ cookiecutter.project_slug }}.rpm
